--- a/lessons.html
+++ b/lessons.html
@@ -43,54 +43,6 @@
             </div>
           </header>
           <div class="cabinet-content">
-            <div class="cabinet-content__top">
-              <div class="cabinet-content__top-user"><a class="link" href="#"><span class="avatar"><img src="images/header/default-avatar.png" alt="alt"/></span><span>Привет, Кристина</span></a></div>
-              <div class="cabinet-content__top-result"> 
-                <div class="tasks performed">Правильно выполненные задания: <span>25</span></div>
-                <div class="tasks not-performed">Не выполненные задания: <span>4</span></div>
-              </div>
-            </div>
-            <div class="cabinet-content__status">
-              <div class="cabinet-content__status-bugs">
-                <div class="cabinet-content__status-text">
-                  <div class="cabinet__block-title">Работа над ошибками</div>
-                  <div class="available">0 доступных для исправления</div>
-                  <p>Все ошибки, которые вы совершаете при выполнении заданий запоминаются. В данной тренировке вы можете их справить.</p>
-                </div><a class="cabinet__btn" href="#">Тренироваться</a>
-              </div>
-              <div class="cabinet-content__status-statistics">
-                <div class="cabinet__block-title">Ваша статистика</div>
-                <div class="cabinet-content__status-statistics-info">
-                  <div class="period"> <span class="period__date">
-                      <input type="date" value="2021-07-01"/></span><b>-</b><span class="period__date">
-                      <input type="date" value="2021-07-01"/></span></div>
-                  <div class="prompt"> <span class="prompt__done">правильные ответы</span><span class="prompt__wrong">неправильные ответы</span></div>
-                </div>
-                <div class="cabinet-content__status-statistics-diagram"><img src="images/cabinet/statistics.png" alt="alt"/></div>
-              </div>
-              <div class="cabinet-content__status-raiting">	
-                <div class="cabinet__block-title">Таблица рейтинга</div>
-                <div class="position">Твоя позиция: <b>2536</b></div>
-                <ul class="raiting">	
-                  <li> 
-                    <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
-                  </li>
-                  <li> 
-                    <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
-                  </li>
-                  <li class="raiting-current">
-                    <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
-                  </li>
-                  <li> 
-                    <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
-                  </li>
-                  <li> 
-                    <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
-                  </li>
-                </ul>
-                <div class="link"><a href="#">Перейти к таблице</a></div>
-              </div>
-            </div>
             <div class="cabinet-content__sections"> 
               <div class="cabinet-content__sections-title">
                 <h2 class="cabinet__title">Выбери раздел</h2><a href="#">Посмотреть историю занятий</a>
@@ -189,31 +141,96 @@
                     <progress class="progress" value="30" max="100"></progress></a></div>
               </div>
             </div>
-            <div class="cabinet-content__await">	
-              <h2 class="cabinet__title">Предстоящие занятия</h2>
-              <div class="cabinet-content__await-item"> 
-                <div class="name"> 
-                  <div class="name__title">1-21. Текстовые задачи №2 </div>
-                  <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
+            <div class="subject">	
+              <div class="subject-top">
+                <h2 class="cabinet__title">Раздел 1. Основы</h2>
+                <div class="subject-info"><a class="subject-info__download" href="#"><img src="images/cabinet/download.svg" alt="alt"/>Скачать шпарганку к уроку</a>
+                  <div class="subject-info__done">Завершено: <span>68%</span></div>
                 </div>
-                <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
               </div>
-              <div class="cabinet-content__await-item"> 
-                <div class="name"> 
-                  <div class="name__title">1-21. Текстовые задачи №2 </div>
-                  <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
+              <div class="subject-items"> 
+                <div class="subject-item">
+                  <div class="subject-item__container">
+                    <div class="subject-item__top"> 
+                      <div class="subject-item__num">Урок 1.</div>
+                      <div class="subject-item__status"><span>Завершено</span></div>
+                      <div class="subject-item__name">Базовые вычисления</div>
+                    </div>
+                    <div class="subject-item__bottom">
+                      <div class="subject-item__reults"> 
+                        <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
+                        <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
+                      </div>
+                      <div class="subject-item__btn"> <a class="site-btn" href="#">Смотреть</a></div>
+                      <progress class="progress" value="30" max="100"></progress>
+                    </div>
+                  </div>
                 </div>
-                <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
-              </div>
-              <div class="cabinet-content__await-item"> 
-                <div class="name"> 
-                  <div class="name__title">1-21. Текстовые задачи №2 </div>
-                  <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
+                <div class="subject-item">
+                  <div class="subject-item__container">
+                    <div class="subject-item__top"> 
+                      <div class="subject-item__num">Урок 1.</div>
+                      <div class="subject-item__status"><span class="not-available">Недоступно</span></div>
+                      <div class="subject-item__name">Базовые вычисления</div>
+                    </div>
+                    <div class="subject-item__bottom">
+                      <div class="subject-item__reults"> 
+                        <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
+                        <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
+                      </div>
+                      <div class="subject-item__btn"> <a class="site-btn" href="#">Смотреть</a></div>
+                      <progress class="progress" value="30" max="100"></progress>
+                    </div>
+                  </div>
                 </div>
-                <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
+                <div class="subject-item">
+                  <div class="subject-item__container">
+                    <div class="subject-item__top"> 
+                      <div class="subject-item__num">Урок 1.</div>
+                      <div class="subject-item__status"><span>Завершено</span></div>
+                      <div class="subject-item__name">Базовые вычисления</div>
+                    </div>
+                    <div class="subject-item__bottom">
+                      <div class="subject-item__reults"> 
+                        <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
+                        <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
+                      </div>
+                      <div class="subject-item__btn"> <a class="site-btn" href="#">Смотреть</a></div>
+                      <progress class="progress" value="30" max="100"></progress>
+                    </div>
+                  </div>
+                </div>
+                <div class="subject-item">
+                  <div class="subject-item__container">
+                    <div class="subject-item__top"> 
+                      <div class="subject-item__num">Урок 1.</div>
+                      <div class="subject-item__status"><span>Завершено</span></div>
+                      <div class="subject-item__name">Базовые вычисления</div>
+                    </div>
+                    <div class="subject-item__bottom">
+                      <div class="subject-item__reults"> 
+                        <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
+                        <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
+                      </div>
+                      <div class="subject-item__btn"> <a class="site-btn" href="#">Смотреть</a></div>
+                      <progress class="progress" value="30" max="100"></progress>
+                    </div>
+                  </div>
+                </div>
+                <div class="subject-item subject-item_controll">
+                  <div class="subject-item__container">
+                    <div class="subject-item__top"> 
+                      <div class="subject-item__name"> <span> <img src="images/cabinet/star.svg" alt="alt"/></span><span>Контрольная работа за раздел 1 «Основы»</span></div>
+                    </div>
+                    <div class="subject-item__bottom">
+                      <div class="subject-item__reults"> 
+                        <div><span>Итоговая оценка:</span><span>нет оценки</span></div>
+                      </div>
+                      <div class="subject-item__btn"> <a class="site-btn" href="#">Выполнить</a></div>
+                      <progress class="progress" value="0" max="100"></progress>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
