--- a/settings.html
+++ b/settings.html
@@ -15,8 +15,8 @@
           <div class="cabinet-nav__content">
             <div class="cabinet-nav__logo"><a href="/"><img src="images/header/logo.png" alt="alt"/></a></div>
             <ul class="cabinet-nav__menu"> 
-              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="/cabinet.html">Кабинет</a></li>
-              <li class="cabinet-nav__item"> <a href="/lessons.html">Уроки</a></li>
+              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="cabinet.html">Кабинет</a></li>
+              <li class="cabinet-nav__item"> <a href="lessons.html">Уроки</a></li>
               <li class="cabinet-nav__item"> <a href="workouts.html">Тренировки</a></li>
               <li class="cabinet-nav__item"> <a href="rating.html">Таблица рейтинга</a></li>
               <li class="cabinet-nav__item"> <a href="trial.html">Пробное ЕГЭ</a></li>
@@ -38,8 +38,8 @@
               <button class="cabinet-header__payment-button">Оплатить</button>
             </div>
             <div class="cabinet-header__account">
-              <div class="cabinet-header__account-notifications"><a href="#"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
-              <div class="cabinet-header__account-profile"> <a class="avatar" href="#"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
+              <div class="cabinet-header__account-notifications"><a href="workouts.html"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
+              <div class="cabinet-header__account-profile"> <a class="avatar" href="settings.html"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
             </div>
           </header>
           <div class="cabinet-content">
@@ -102,7 +102,7 @@
           <div class="cabinet-footer">
             <div class="cabinet-footer__phones">	<a href="tel:+79299713718">+7 (929) 971-37-18</a><a href="tel:+79299713718">+7 (929) 971-37-18</a></div>
             <ul class="cabinet-footer__nav"> 
-              <li class="cabinet-footer__nav-item"><a href="">Cвязаться с преподавателем</a></li>
+              <li class="cabinet-footer__nav-item"><a href="connect.html">Cвязаться с преподавателем</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Договор оферты</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Политика конфиденциальности</a></li>
             </ul>
