--- a/cabinet.html
+++ b/cabinet.html
@@ -15,8 +15,8 @@
           <div class="cabinet-nav__content">
             <div class="cabinet-nav__logo"><a href="/"><img src="images/header/logo.png" alt="alt"/></a></div>
             <ul class="cabinet-nav__menu"> 
-              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="/cabinet.html">Кабинет</a></li>
-              <li class="cabinet-nav__item"> <a href="/lessons.html">Уроки</a></li>
+              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="cabinet.html">Кабинет</a></li>
+              <li class="cabinet-nav__item"> <a href="lessons.html">Уроки</a></li>
               <li class="cabinet-nav__item"> <a href="workouts.html">Тренировки</a></li>
               <li class="cabinet-nav__item"> <a href="rating.html">Таблица рейтинга</a></li>
               <li class="cabinet-nav__item"> <a href="trial.html">Пробное ЕГЭ</a></li>
@@ -38,13 +38,13 @@
               <button class="cabinet-header__payment-button">Оплатить</button>
             </div>
             <div class="cabinet-header__account">
-              <div class="cabinet-header__account-notifications"><a href="#"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
-              <div class="cabinet-header__account-profile"> <a class="avatar" href="#"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
+              <div class="cabinet-header__account-notifications"><a href="workouts.html"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
+              <div class="cabinet-header__account-profile"> <a class="avatar" href="settings.html"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
             </div>
           </header>
           <div class="cabinet-content">
             <div class="cabinet-content__top">
-              <div class="cabinet-content__top-user"><a class="link" href="#"><span class="avatar"><img src="images/header/default-avatar.png" alt="alt"/></span><span>Привет, Кристина</span></a></div>
+              <div class="cabinet-content__top-user"><a class="link" href="workouts.html"><span class="avatar"><img src="images/header/default-avatar.png" alt="alt"/></span><span>Привет, Кристина</span></a></div>
               <div class="cabinet-content__top-result"> 
                 <div class="tasks performed">Правильно выполненные задания: <span>25</span></div>
                 <div class="tasks not-performed">Не выполненные задания: <span>4</span></div>
@@ -56,7 +56,7 @@
                   <div class="cabinet__block-title">Работа над ошибками</div>
                   <div class="available">0 доступных для исправления</div>
                   <p>Все ошибки, которые вы совершаете при выполнении заданий запоминаются. В данной тренировке вы можете их справить.</p>
-                </div><a class="cabinet__btn" href="#">Тренироваться</a>
+                </div><a class="cabinet__btn" href="lesson.html">Тренироваться</a>
               </div>
               <div class="cabinet-content__status-statistics">
                 <div class="cabinet__block-title">Ваша статистика</div>
@@ -88,99 +88,99 @@
                     <div><span class="name">1.Мартынова Александра</span><b>51706</b></div>
                   </li>
                 </ul>
-                <div class="link"><a href="#">Перейти к таблице</a></div>
+                <div class="link"><a href="rating.html">Перейти к таблице</a></div>
               </div>
             </div>
             <div class="cabinet-content__sections"> 
               <div class="cabinet-content__sections-title">
-                <h2 class="cabinet__title">Выбери раздел</h2><a href="#">Посмотреть историю занятий</a>
+                <h2 class="cabinet__title">Выбери раздел</h2><a href="lessons.html">Посмотреть историю занятий</a>
               </div>
               <div class="cabinet-content__sections-slider" id="sectionsSlider">	
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#">
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html">
                     <div class="cabinet__block-title">Раздел 1. Основы</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 1. Основы</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 2. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="80" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 3. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="10" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 4. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 1. Основы</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 2. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="80" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 3. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="10" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 4. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 1. Основы</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="30" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 2. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="80" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 3. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
                       <div class="bottom"><span>Оценка за итоговую работу: </span><span>5+</span></div>
                     </div>
                     <progress class="progress" value="10" max="100"></progress></a></div>
-                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="#"> 
+                <div class="sections-slider-item"> <a class="sections-slider-item__container" href="lesson.html"> 
                     <div class="cabinet__block-title">Раздел 4. Формулы сокращенного умножения</div>
                     <div class="sections-slider-item__reults"> 
                       <div class="top"> <span>Выполненных упражнений: </span><span>5 из 5</span></div>
@@ -197,7 +197,7 @@
                   <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
                 </div>
                 <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
+                <div class="btn"><a class="site-btn" href="lesson.html">Принять участие</a></div>
               </div>
               <div class="cabinet-content__await-item"> 
                 <div class="name"> 
@@ -205,7 +205,7 @@
                   <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
                 </div>
                 <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
+                <div class="btn"><a class="site-btn" href="lesson.html">Принять участие</a></div>
               </div>
               <div class="cabinet-content__await-item"> 
                 <div class="name"> 
@@ -213,14 +213,14 @@
                   <div class="name__start">Начало: <span>cегодня в 15:00</span></div>
                 </div>
                 <div class="info">Задание ЕГЭ №11. Средняя скорость. Движение по прямой. Движение по воде. Движение по кругу.</div>
-                <div class="btn"><a class="site-btn" href="#">Принять участие</a></div>
+                <div class="btn"><a class="site-btn" href="lesson.html">Принять участие</a></div>
               </div>
             </div>
           </div>
           <div class="cabinet-footer">
             <div class="cabinet-footer__phones">	<a href="tel:+79299713718">+7 (929) 971-37-18</a><a href="tel:+79299713718">+7 (929) 971-37-18</a></div>
             <ul class="cabinet-footer__nav"> 
-              <li class="cabinet-footer__nav-item"><a href="">Cвязаться с преподавателем</a></li>
+              <li class="cabinet-footer__nav-item"><a href="connect.html">Cвязаться с преподавателем</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Договор оферты</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Политика конфиденциальности</a></li>
             </ul>
