--- a/lesson.html
+++ b/lesson.html
@@ -15,8 +15,8 @@
           <div class="cabinet-nav__content">
             <div class="cabinet-nav__logo"><a href="/"><img src="images/header/logo.png" alt="alt"/></a></div>
             <ul class="cabinet-nav__menu"> 
-              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="/cabinet.html">Кабинет</a></li>
-              <li class="cabinet-nav__item"> <a href="/lessons.html">Уроки</a></li>
+              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="cabinet.html">Кабинет</a></li>
+              <li class="cabinet-nav__item"> <a href="lessons.html">Уроки</a></li>
               <li class="cabinet-nav__item"> <a href="workouts.html">Тренировки</a></li>
               <li class="cabinet-nav__item"> <a href="rating.html">Таблица рейтинга</a></li>
               <li class="cabinet-nav__item"> <a href="trial.html">Пробное ЕГЭ</a></li>
@@ -38,13 +38,13 @@
               <button class="cabinet-header__payment-button">Оплатить</button>
             </div>
             <div class="cabinet-header__account">
-              <div class="cabinet-header__account-notifications"><a href="#"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
-              <div class="cabinet-header__account-profile"> <a class="avatar" href="#"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
+              <div class="cabinet-header__account-notifications"><a href="workouts.html"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
+              <div class="cabinet-header__account-profile"> <a class="avatar" href="settings.html"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
             </div>
           </header>
           <div class="cabinet-content">
             <div class="lesson-top">
-              <div class="lesson-top__title"><a class="lesson-top__back" href="#"><img src="images/cabinet/back-arrow.svg" alt="alt"/></a>
+              <div class="lesson-top__title"><a class="lesson-top__back" href="lessons.html"><img src="images/cabinet/back-arrow.svg" alt="alt"/></a>
                 <h2 class="cabinet__title">Урок 1</h2>
               </div>
               <div class="lesson-top__status"><a href="#"> <img src="images/cabinet/download.svg" alt="alt"/>Скачать шпаргалку к уроку</a>
@@ -55,25 +55,25 @@
               <div class="lesson-parts__item"> 
                 <div class="lesson-parts__name">Часть 1. Формулы сокращенного умножения</div>
                 <div class="lesson-parts__btn">	
-                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="#">Смотреть</a>
+                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="test.html">Смотреть</a>
                 </div>
               </div>
               <div class="lesson-parts__item"> 
                 <div class="lesson-parts__name">Часть 1. Формулы сокращенного умножения</div>
                 <div class="lesson-parts__btn">	
-                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="#">Смотреть</a>
+                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="test2.html">Смотреть</a>
                 </div>
               </div>
               <div class="lesson-parts__item"> 
                 <div class="lesson-parts__name">Часть 1. Формулы сокращенного умножения</div>
                 <div class="lesson-parts__btn">	
-                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="#">Смотреть</a>
+                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="test.html">Смотреть</a>
                 </div>
               </div>
               <div class="lesson-parts__item"> 
                 <div class="lesson-parts__name">Часть 1. Формулы сокращенного умножения</div>
                 <div class="lesson-parts__btn">	
-                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="#">Смотреть</a>
+                  <div class="lesson-parts__time">Продолжительность: <span>05:33</span></div><a class="site-btn" href="test2.html">Смотреть</a>
                 </div>
               </div>
             </div>
@@ -99,14 +99,14 @@
             <div class="lesson-control">
               <div class="lesson-control__title">	<img src="images/cabinet/star.svg" alt="alt"/>Итоговая работа</div>
               <div class="lesson-control__btn"> 
-                <div class="lesson-control__btn-total">Итоговая оценка: <span>нет оценки</span></div><a class="site-btn" href="#">Выполнить</a>
+                <div class="lesson-control__btn-total">Итоговая оценка: <span>нет оценки</span></div><a class="site-btn" href="test.html">Выполнить</a>
               </div>
             </div>
           </div>
           <div class="cabinet-footer">
             <div class="cabinet-footer__phones">	<a href="tel:+79299713718">+7 (929) 971-37-18</a><a href="tel:+79299713718">+7 (929) 971-37-18</a></div>
             <ul class="cabinet-footer__nav"> 
-              <li class="cabinet-footer__nav-item"><a href="">Cвязаться с преподавателем</a></li>
+              <li class="cabinet-footer__nav-item"><a href="connect.html">Cвязаться с преподавателем</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Договор оферты</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Политика конфиденциальности</a></li>
             </ul>
