--- a/payment.html
+++ b/payment.html
@@ -15,8 +15,8 @@
           <div class="cabinet-nav__content">
             <div class="cabinet-nav__logo"><a href="/"><img src="images/header/logo.png" alt="alt"/></a></div>
             <ul class="cabinet-nav__menu"> 
-              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="/cabinet.html">Кабинет</a></li>
-              <li class="cabinet-nav__item"> <a href="/lessons.html">Уроки</a></li>
+              <li class="cabinet-nav__item cabinet-nav__item_current"><a href="cabinet.html">Кабинет</a></li>
+              <li class="cabinet-nav__item"> <a href="lessons.html">Уроки</a></li>
               <li class="cabinet-nav__item"> <a href="workouts.html">Тренировки</a></li>
               <li class="cabinet-nav__item"> <a href="rating.html">Таблица рейтинга</a></li>
               <li class="cabinet-nav__item"> <a href="trial.html">Пробное ЕГЭ</a></li>
@@ -38,22 +38,22 @@
               <button class="cabinet-header__payment-button">Оплатить</button>
             </div>
             <div class="cabinet-header__account">
-              <div class="cabinet-header__account-notifications"><a href="#"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
-              <div class="cabinet-header__account-profile"> <a class="avatar" href="#"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
+              <div class="cabinet-header__account-notifications"><a href="workouts.html"><span class="ring"><img src="images/header/ring.svg" alt="alt"/></span><span class="text">99+</span></a></div>
+              <div class="cabinet-header__account-profile"> <a class="avatar" href="settings.html"> <img src="images/header/default-avatar.png" alt="alt"/></a><a class="exit" href="#">Выйти</a></div>
             </div>
           </header>
           <div class="cabinet-content">
             <div class="payment">
               <div class="payment-top"> 
-                <div class="cabinet__title">Оплата курсов</div><a href="#">Посмотреть историю оплаты</a>
+                <div class="cabinet__title">Оплата курсов</div><a href="payment-history.html">Посмотреть историю оплаты</a>
               </div>
-              <div class="payment-nav"><a class="active" href="#">Выберите предмет</a><a href="#">Выберите курс</a><a href="#">Раздел курса</a></div>
+              <div class="payment-nav"><a class="active" href="payment.html">Выберите предмет</a><a href="payment2.html">Выберите курс</a><a href="payment3.html">Раздел курса</a></div>
               <div class="payment-courses"> 
                 <div class="payment-courses__item">
                   <div class="payment-courses__item-container">
                     <div class="payment-courses__item-top">
                       <div class="item__title">Математика</div>
-                      <div class="info">10 разделов, 56 уроков, 120 заданий</div><a class="link" href="#"> <img src="images/cabinet/payment-arrow.svg" alt="alt"/></a>
+                      <div class="info">10 разделов, 56 уроков, 120 заданий</div><a class="link" href="payment2.html"> <img src="images/cabinet/payment-arrow.svg" alt="alt"/></a>
                       <div class="text">Японская система развития интеллекта. Поможет узнать, насколько эффективно в данный момент работает ваш мозг и развить мышление. Проходите тренировку каждый день и повышайте результаты.</div>
                     </div>
                     <div class="payment-courses__item-bottom">
@@ -66,7 +66,7 @@
                   <div class="payment-courses__item-container">
                     <div class="payment-courses__item-top">
                       <div class="item__title">Английский язык</div>
-                      <div class="info">10 разделов, 56 уроков, 120 заданий</div><a class="link" href="#"> <img src="images/cabinet/payment-arrow.svg" alt="alt"/></a>
+                      <div class="info">10 разделов, 56 уроков, 120 заданий</div><a class="link" href="payment2.html"> <img src="images/cabinet/payment-arrow.svg" alt="alt"/></a>
                       <div class="text">Японская система развития интеллекта. Поможет узнать, насколько эффективно в данный момент работает ваш мозг и развить мышление. Проходите тренировку каждый день и повышайте результаты.</div>
                     </div>
                     <div class="payment-courses__item-bottom">
@@ -81,7 +81,7 @@
           <div class="cabinet-footer">
             <div class="cabinet-footer__phones">	<a href="tel:+79299713718">+7 (929) 971-37-18</a><a href="tel:+79299713718">+7 (929) 971-37-18</a></div>
             <ul class="cabinet-footer__nav"> 
-              <li class="cabinet-footer__nav-item"><a href="">Cвязаться с преподавателем</a></li>
+              <li class="cabinet-footer__nav-item"><a href="connect.html">Cвязаться с преподавателем</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Договор оферты</a></li>
               <li class="cabinet-footer__nav-item"><a href="">Политика конфиденциальности</a></li>
             </ul>
